<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping Cart Optimizer</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="test">This is a test string</string>
    <string name="about">About Us</string>
    <string name="Tutorial">Tutorial</string>
    <string name="Start">Start!</string>
    <string name="email">Send Results to E-mail</string>
    <string name="change">Change items</string>
    <string name="startOver">Start Over</string>
    <string name="next">Next</string>
    <string name="fast">Fast (not optimal)</string>
    <string name="slow">Not fast (optimal)</string>
    <string name="addItem">Add Item</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="item">Item</string>
    <string name="back">Back</string>
    <string name="desirability">Desirability</string>


</resources>
