<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
     >

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_Start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Start"
        android:background="#ffffff"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp" >
    </Button>

    <Button
        android:id="@+id/button_about"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:textSize="20sp" >
    </Button>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/button_tutorial"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Tutorial"
        android:background="#fff"
        android:textSize="20sp" >
    </Button>

</LinearLayout>