<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Item_List" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:text="@string/item"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="79dp"
        android:layout_toLeftOf="@+id/spinner1"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/spinner1"
        android:text="@string/addItem" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1" />

</RelativeLayout>
